--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,17 +15,54 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 </head>
+
 <body>
-    
+    <!-- main content -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- header -->
+        <header class="flex pt-10 mb-20">
+            <!-- text content -->
+            <div>
+                <h1 class="text-7xl font-semibold ">It's good <br>
+                    tea time at The <br> Tea House</h1>
+                <p class="text-lg text-[#777777] pt-8 pb-8 w">
+                    Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
+                </p>
+                <br>
+
+                <button class="font-bold text-xl bg-gradient-to-l from-red-500 to-orange-400 p-4 rounded-lg text-white ">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+
+
+            </div>
+            <!-- image content -->
+            <div class="relative">
+                <!-- image -->
+                 <div>
+                    <img class="w-full" src="images/banner.png" alt="">
+                 </div>
+                 <!-- card -->
+                  <div class="absolute flex items-center px-2 py-2 lg:py-4 md:px-10 rounded-lg bg-white shadow-lg top-28 md:top-96 md:left-32 lg:left-28">
+                    <div>
+                        <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                    </div>
+                    <div class="ml-2">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                    </div>
+                  </div>
+            </div>
+        </header>
+    </main>
 </body>
+
 </html>
