--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     <!-- main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
         <!-- header -->
-        <header class="flex pt-10 mb-20">
+        <header class="pt-10 mb-20 grid lg:grid-cols-2 sm:grid-cols-1">
             <!-- text content -->
             <div>
-                <h1 class="text-7xl font-semibold ">It's good <br>
-                    tea time at The <br> Tea House</h1>
+                <h1 class="lg:text-7xl text-5xl font-semibold ">It's good <br>tea time at The <br> Tea House</h1>
                 <p class="text-lg text-[#777777] pt-8 pb-8 w">
                     Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
                 </p>
@@ -62,6 +61,66 @@
                   </div>
             </div>
         </header>
+          <!-- Featured Products Section -->
+      <section class="py-8 lg:py-24">
+        <!-- Title -->
+        <div class="text-center mb-8">
+          <h1 class="text-3xl md:text-4xl font-bold mb-5">
+            Our Featured Products
+          </h1>
+          <p class="text-gray-600 max-w-xl mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- Grid Cards -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center"
+        >
+          <!-- Product Card -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-1.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Milk Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- Product Card -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-2.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Black Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- Product Card -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-3.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Green Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- Product Card -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-4.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Lemon Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 </body>
 
